--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "prisma": "^6.16.2",
     "tsx": "^4.20.5"
